# PasswordsGenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compileProject.bat  compileProject.sh  create-dmg.sh
.github/workflows/: build.yml
PasswordsGenerator/: PasswdGen.java
include/: logger.h  mainwindow.h  passwordgenerator.h
launcher/macOS/비밀번호 생성기.app/Contents/: Info.plist
src/: logger.cpp  mainwindow.cpp  passwordgenerator.cpp
